--- a/javascript/watchAndCode/.vscode/launch.json
+++ b/javascript/watchAndCode/.vscode/launch.json
@@ -5,10 +5,16 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "node",
+            // "type": "node",
+            // "request": "launch",
+            // "name": "Launch Program",
+            // "program": "${workspaceFolder}/todov6.js"
+
+            "name": "Launch index.html",
+            "type": "firefox",
             "request": "launch",
-            "name": "Launch Program",
-            "program": "${workspaceFolder}/todov3.js"
+            "reAttach": true,
+            "file": "${workspaceFolder}/index.html"
         }
     ]
 }
