--- a/todo/v5/package.json
+++ b/todo/v5/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "@types/jquery": "^3.3.3",
+    "handlebars": "^4.0.11",
     "jquery": "^3.3.1"
   }
 }
