--- a/todo/v5/package.json
+++ b/todo/v5/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@types/jquery": "^3.3.3",
     "handlebars": "^4.0.11",
-    "jquery": "^3.3.1",
-    "uikit": "^3.0.0-rc.6"
+    "jquery": "^3.3.1"
   }
 }
