--- a/typescript/tsDocs/tsconfig.json
+++ b/typescript/tsDocs/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "files": [
-    "src/ts/*.ts"
+    "src/ts/symbols.ts"
   ],
   "compilerOptions": {
     /* Basic Options */
@@ -33,8 +33,10 @@
     "strictNullChecks": true,
     /* Enable strict null checks. */
     // "strictFunctionTypes": true,           /* Enable strict checking of function types. */
-    // "strictPropertyInitialization": true,  /* Enable strict checking of property initialization in classes. */
-    // "noImplicitThis": true,                /* Raise error on 'this' expressions with an implied 'any' type. */
+    "strictPropertyInitialization": true,
+    /* Enable strict checking of property initialization in classes. */
+    "noImplicitThis": true,
+    /* Raise error on 'this' expressions with an implied 'any' type. */
     "alwaysStrict": true,
     /* Parse in strict mode and emit "use strict" for each source file. */
 
