--- a/theOdinProject/projects/calculator/package.json
+++ b/theOdinProject/projects/calculator/package.json
@@ -12,7 +12,14 @@
   "dependencies": {
     "chai": "^4.1.2",
     "gulp": "^4.0.0",
+    "gulp-typescript": "^5.0.0-alpha.3",
     "mocha": "^5.2.0",
+    "mochawesome": "^3.0.2",
     "typescript": "^2.9.2"
+  },
+  "devDependencies": {
+    "@types/chai": "^4.1.4",
+    "@types/mocha": "^5.2.4",
+    "tslint": "^5.11.0"
   }
 }
