--- a/theOdinProject/projects/calculator/.vscode/launch.json
+++ b/theOdinProject/projects/calculator/.vscode/launch.json
@@ -4,10 +4,28 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [{
-        "type": "chrome",
-        "request": "launch",
-        "name": "Launch Chrome against localhost",
-        "url": "http://localhost:5500/index.html",
-        "webRoot": "${workspaceFolder}"
-    }]
+            "type": "chrome",
+            "request": "launch",
+            "name": "Launch Chrome against localhost",
+            "url": "http://localhost:5500/index.html",
+            "webRoot": "${workspaceFolder}"
+        },
+        {
+            "type": "node",
+            "request": "launch",
+            "name": "Launch All Mocha Tests",
+            "preLaunchTask": "gulp",
+            "cwd": "${workspaceRoot}",
+            "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
+            "args": [
+                "-u", "tdd",
+                "--no-timeouts",
+                "--colors",
+                "--reporter", "mochawesome",
+                "--reporter-options", "reportDir=TestResults",
+                "${workspaceFolder}/test/ts" //you can specify paths to specific tests here
+            ],
+            "internalConsoleOptions": "openOnSessionStart"
+        }
+    ]
 }
