The Odin Project - Calculator Project
- still unsuccessful trying to get mocha-sidebar to work

--- a/theOdinProject/projects/calculator/.vscode/settings.json
+++ b/theOdinProject/projects/calculator/.vscode/settings.json
@@ -1,3 +1,11 @@
 {
-    "mocha.files.glob": "test/ts/*.ts"
+    "mocha.files.glob": "test/ts/*.spec.ts",
+    "mocha.requires": [
+        "ts-node/register"
+    ],
+    "mocha.options": {
+        "compilers": {
+            "ts": "ts-node/register"
+        }
+    }
 }
