--- a/theOdinProject/projects/calculator/.vscode/launch.json
+++ b/theOdinProject/projects/calculator/.vscode/launch.json
@@ -6,14 +6,14 @@
     "configurations": [{
             "type": "chrome",
             "request": "launch",
-            "name": "Launch Chrome against localhost",
-            "url": "http://localhost:5500/index.html",
+            "name": "Launch base html",
+            "url": "http://localhost:5500/src/views/index.html",
             "webRoot": "${workspaceFolder}"
         },
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch All Mocha Tests",
+            "name": "Debug all mocha tests",
             "preLaunchTask": "gulp",
             "cwd": "${workspaceRoot}",
             "program": "${workspaceFolder}/node_modules/mocha/bin/_mocha",
