The Odin Project - Calculator Project
- ran into module export/import issue with typescript to js

--- a/theOdinProject/projects/calculator/.vscode/launch.json
+++ b/theOdinProject/projects/calculator/.vscode/launch.json
@@ -25,7 +25,8 @@
                 "--reporter-options", "reportDir=TestResults",
                 "${workspaceFolder}/test/ts" //you can specify paths to specific tests here
             ],
-            "internalConsoleOptions": "openOnSessionStart"
+            "internalConsoleOptions": "openOnSessionStart",
+            "sourceMaps": true
         }
     ]
 }
