--- a/theOdinProject/projects/calculator/package.json
+++ b/theOdinProject/projects/calculator/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "chai": "^4.1.2",
+    "commonjs": "0.0.1",
     "del": "^3.0.0",
     "gulp": "^4.0.0",
     "gulp-typescript": "^5.0.0-alpha.3",
@@ -22,6 +23,7 @@
     "@types/chai": "^4.1.4",
     "@types/mocha": "^5.2.4",
     "gulp-mocha": "^6.0.0",
+    "gulp-sourcemaps": "^2.6.4",
     "ts-node": "^7.0.0",
     "tslint": "^5.11.0"
   }
