--- a/theOdinProject/projects/calculator/package.json
+++ b/theOdinProject/projects/calculator/package.json
@@ -10,14 +10,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "browserify": "^16.2.2",
     "chai": "^4.1.2",
     "commonjs": "0.0.1",
     "del": "^3.0.0",
+    "fancylog": "^3.1.1",
+    "glob": "^7.1.2",
     "gulp": "^4.0.0",
     "gulp-typescript": "^5.0.0-alpha.3",
+    "gulp-uglify": "^3.0.0",
     "mocha": "^5.2.0",
     "mochawesome": "^3.0.2",
-    "typescript": "^2.9.2"
+    "tsify": "^4.0.0",
+    "typescript": "^2.9.2",
+    "vinyl-buffer": "^1.0.1",
+    "vinyl-source-stream": "^2.0.0",
+    "watchify": "^3.11.0"
   },
   "devDependencies": {
     "@types/chai": "^4.1.4",
