--- a/theOdinProject/projects/calculator/tsconfig.json
+++ b/theOdinProject/projects/calculator/tsconfig.json
@@ -9,13 +9,16 @@
     // "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
     // "jsx": "preserve",                     /* Specify JSX code generation: 'preserve', 'react-native', or 'react'. */
-    // "declaration": true,                   /* Generates corresponding '.d.ts' file. */
-    // "declarationMap": true,                /* Generates a sourcemap for each corresponding '.d.ts' file. */
+    // "declaration": true,
+    /* Generates corresponding '.d.ts' file. */
+    // "declarationMap": true,
+    /* Generates a sourcemap for each corresponding '.d.ts' file. */
     "sourceMap": true,
     /* Generates corresponding '.map' file. */
     // "outFile": "./",                       /* Concatenate and emit output to single file. */
-    // "outDir": "./",                        /* Redirect output structure to the directory. */
-    "rootDir": "./src/ts/*.ts",
+    // "outDir": "./dist",
+    /* Redirect output structure to the directory. */
+    // "rootDir": "./src/ts/*.ts",
     /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
     // "composite": true,                     /* Enable project compilation */
     // "removeComments": true,                /* Do not emit comments to output. */
@@ -71,9 +74,13 @@
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
+  "include": [
+    "./src/ts/*.ts"
+  ],
   "exclude": [
     "node_modules",
     "**/*.spec.ts",
     "./src/ts/interfaces/*.ts"
-  ]
+  ],
+  "compileOnSave": true
 }
