The Odin Project - Calculator Project
- finally made progress getting some actual coding done
- got numbers and basic operations hooked up but needs refactoring

--- a/theOdinProject/projects/calculator/.vscode/launch.json
+++ b/theOdinProject/projects/calculator/.vscode/launch.json
@@ -7,7 +7,7 @@
             "type": "chrome",
             "request": "launch",
             "name": "Launch base html",
-            "url": "http://localhost:5500/src/views/index.html",
+            "url": "http://localhost:5500/dist/views/index.html",
             "webRoot": "${workspaceFolder}"
         },
         {
