The Odin Project - Calculator Project
- got the display summary to work correctly
- found a bug where after clicking equal, the display summary is not updated correctly

--- a/theOdinProject/projects/calculator/.vscode/settings.json
+++ b/theOdinProject/projects/calculator/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "mocha.files.glob": "test/ts/*.spec.ts",
+    "mocha.files.glob": "**/*.spec.ts",
     "mocha.requires": [
         "ts-node/register"
     ],
@@ -7,5 +7,5 @@
         "compilers": {
             "ts": "ts-node/register"
         }
-    }
+    },
 }
