YouTube - Learn Electron in Less than 60 Minutes
- notification not working

--- a/electron/DesignCourse_youTube/crypto-app/_projectFilesFromSrc/3/package.json
+++ b/electron/DesignCourse_youTube/crypto-app/_projectFilesFromSrc/3/package.json
@@ -6,11 +6,10 @@
   "scripts": {
     "start": "electron ."
   },
-  "author": "meeeeeeeeeeee",
+  "keywords": [],
+  "author": "",
   "license": "ISC",
   "devDependencies": {
-    "axios": "^0.18.0",
-    "electron": "2.0.6",
-    "electron-windows-notifications": "^2.1.1"
+    "electron": "1.7.9"
   }
 }
