--- a/electron/ts_react_elect_wpack_v1/package.json
+++ b/electron/ts_react_elect_wpack_v1/package.json
@@ -23,6 +23,7 @@
     "awesome-typescript-loader": "^5.2.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^7.1.5",
+    "babel-preset-es2015": "^6.24.1",
     "babel-preset-es2015-node": "^6.1.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
