--- a/electron/ts_react_elect_wpack_v1/package.json
+++ b/electron/ts_react_elect_wpack_v1/package.json
@@ -8,14 +8,16 @@
     "react-scripts-ts": "2.16.0",
     "tslint-config-airbnb": "^5.9.2"
   },
+  "main": "./dist/main.js",
   "scripts": {
-    "start": "react-scripts-ts start",
-    "build": "react-scripts-ts build",
+    "start": "electron ./dist/main.bundle.js",
     "test": "react-scripts-ts test --env=jsdom",
     "eject": "react-scripts-ts eject",
-    "bwp": "webpack --config webpack.config.js"
+    "bwp": "webpack --config webpack.config.js",
+    "dev": "rimraf dist && webpack --config ./webpack.dev.js --progress --colors"
   },
   "devDependencies": {
+    "@types/electron": "^1.6.10",
     "@types/jest": "^23.3.1",
     "@types/node": "^10.5.6",
     "@types/react": "^16.4.7",
@@ -27,7 +29,9 @@
     "babel-preset-es2015-node": "^6.1.1",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^1.0.0",
+    "electron": "^2.0.6",
     "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.2.0",
     "node-sass": "^4.9.2",
     "rimraf": "^2.6.2",
     "sass-loader": "^7.1.0",
