--- a/electron/ts_react_elect_wpack_v2/package.json
+++ b/electron/ts_react_elect_wpack_v2/package.json
@@ -11,7 +11,8 @@
     "start": "react-scripts-ts start",
     "build": "react-scripts-ts build",
     "test": "react-scripts-ts test --env=jsdom",
-    "eject": "react-scripts-ts eject"
+    "eject": "react-scripts-ts eject",
+    "bundle": "webpack"
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0-beta.56",
@@ -25,6 +26,9 @@
     "@types/node": "^10.5.6",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
-    "typescript": "^3.0.1"
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "typescript": "^3.0.1",
+    "webpack-cli": "^3.1.0"
   }
 }
