YouTube - DesignCourse (Learn Electron in Less than 60 Minutes - crypto-app v2)
- fixed getting debugging to work

--- a/electron/DesignCourse_youTube/crypto-app-v2/.vscode/launch.json
+++ b/electron/DesignCourse_youTube/crypto-app-v2/.vscode/launch.json
@@ -10,6 +10,7 @@
             "runtimeExecutable": "${workspaceRoot}/node_modules/.bin/electron",
             "cwd": "${workspaceRoot}",
             "runtimeArgs": [
+                ".",
                 "--enable-logging",
                 "--remote-debugging-port=9223"
             ],
@@ -25,7 +26,8 @@
             "name": "Electron: Renderer",
             "type": "chrome",
             "request": "attach",
-            "webRoot": "${workspaceRoot}/dist",
+            "port": 9223,
+            "webRoot": "${workspaceRoot}",
             "sourceMaps": true,
             "internalConsoleOptions": "openOnSessionStart",
             "timeout": 30000
