--- a/electron/DesignCourse_youTube/crypto-app-v2/package.json
+++ b/electron/DesignCourse_youTube/crypto-app-v2/package.json
@@ -10,6 +10,7 @@
     "prod": "webpack --config ./webpack.prod.js --progress --colors"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.0",
     "@types/node": "^10.5.7",
     "awesome-typescript-loader": "^5.2.0",
     "clean-webpack-plugin": "^0.1.19",
@@ -33,6 +34,7 @@
     "@types/electron": "^1.6.10",
     "@types/react": "^16.4.7",
     "@types/react-dom": "^16.0.6",
+    "axios": "^0.18.0",
     "electron": "^2.0.6",
     "react": "^16.4.2",
     "react-dom": "^16.4.2"
