--- a/node/traversyMedia_youTube/node_express_from_scratch/package.json
+++ b/node/traversyMedia_youTube/node_express_from_scratch/package.json
@@ -9,8 +9,14 @@
   "author": "Meh",
   "license": "ISC",
   "dependencies": {
+    "@types/jquery": "^3.3.22",
+    "@types/node": "^10.12.6",
     "body-parser": "^1.18.3",
+    "connect-flash": "^0.1.1",
     "express": "^4.16.4",
+    "express-messages": "^1.0.1",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
     "mongoose": "^5.3.11",
     "pug": "^2.0.3"
   },
