Updating to use module in package.json and Node16 in tsconfig.json

--- a/typescript/essential-typescript-5/todo/tsconfig.json
+++ b/typescript/essential-typescript-5/todo/tsconfig.json
@@ -3,7 +3,7 @@
         "target": "ES2022",
         "outDir": "./dist",
         "rootDir": "./src",
-        "module": "CommonJS",
+        "module": "Node16"
         // "strict": true
     }
 }
