Touching on unit testing with Jest

--- a/typescript/essential-typescript-5/ch_06/tools/tsconfig.json
+++ b/typescript/essential-typescript-5/ch_06/tools/tsconfig.json
@@ -1,18 +1,12 @@
 {
     "compilerOptions": {
         "forceConsistentCasingInFileNames": true,
+        "strict": true,
         "target": "ES2022",
         "outDir": "./dist",
         "rootDir": "./src",
-        "strict": true,
         "noEmitOnError": true,
-        "sourceMap": true,
-        "module": "ES2022"
-    },
-    "include": [
-        "src"
-    ],
-    "exclude": [
-        "node_modules"
-    ]
+        "module": "Node16",
+        "sourceMap": true
+    }
 }
