Web App (before using Express)

--- a/typescript/essential-typescript-5/ch_16/webapp/tsconfig.json
+++ b/typescript/essential-typescript-5/ch_16/webapp/tsconfig.json
@@ -6,6 +6,7 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "jsx": "react",
-    "jsxFactory": "createElement"
+    "jsxFactory": "createElement",
+    "moduleResolution": "Bundler",
   }
 }
