--- a/typescript/essential-typescript-5/ch_16/webapp/package.json
+++ b/typescript/essential-typescript-5/ch_16/webapp/package.json
@@ -4,13 +4,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "json": "json-server data.js -p 4600",
+    "wds": "webpack serve",
+    "start": "npm-run-all -p json wds"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "css-loader": "^6.7.3",
+    "express": "^4.18.2",
+    "json-server": "^0.17.3",
+    "npm-run-all": "^4.1.5",
     "style-loader": "^3.3.2",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.2",
@@ -19,6 +24,7 @@
     "webpack-dev-server": "^4.15.1"
   },
   "dependencies": {
+    "axios": "^1.3.4",
     "bootstrap": "^5.2.3"
   }
 }
